<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>
    <!--  I use  ConstraintLayout because in each row i have 2 elements -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGray">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/edit_name"
            android:text="@string/shoe_name"
            app:layout_constraintBottom_toBottomOf="@+id/edit_name"
            app:layout_constraintEnd_toStartOf="@+id/edit_name"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edit_name" />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints="@string/shoe_name"
            android:ems="10"
            android:inputType="text"
            android:text="@={shoe.name}"
            app:layout_constraintBottom_toTopOf="@+id/edit_company"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/edit_company"
            android:text="@string/company"
            app:layout_constraintBottom_toBottomOf="@+id/edit_company"
            app:layout_constraintEnd_toStartOf="@+id/edit_company"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edit_company" />

        <EditText
            android:id="@+id/edit_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints="@string/company"
            android:ems="10"
            android:inputType="text"
            android:labelFor="@id/company"
            android:text="@={shoe.company}"
            app:layout_constraintBottom_toTopOf="@+id/edit_shoe_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/company"
            app:layout_constraintTop_toBottomOf="@+id/edit_name" />

        <EditText
            android:id="@+id/edit_shoe_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:autofillHints="@string/shoe_size"
            android:ems="10"
            android:inputType="numberDecimal"
            android:labelFor="@id/shoe_size"
            android:text="@={``+shoe.size}"
            app:layout_constraintBottom_toTopOf="@+id/edit_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/shoe_size"
            app:layout_constraintTop_toBottomOf="@+id/edit_company" />

        <EditText
            android:id="@+id/edit_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="@string/description"
            android:ems="10"
            android:inputType="text"
            android:labelFor="@+id/description"
            android:text="@={shoe.description}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/description"
            app:layout_constraintTop_toBottomOf="@+id/edit_shoe_size" />

        <TextView
            android:id="@+id/shoe_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/edit_shoe_size"
            android:text="@string/shoe_size"
            app:layout_constraintBottom_toBottomOf="@+id/edit_shoe_size"
            app:layout_constraintEnd_toStartOf="@+id/edit_shoe_size"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edit_shoe_size" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/edit_description"
            android:text="@string/description"
            app:layout_constraintBottom_toBottomOf="@+id/edit_description"
            app:layout_constraintEnd_toStartOf="@+id/edit_description"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edit_description" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/btn_cancel"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="@+id/save"
            app:layout_constraintEnd_toStartOf="@+id/save"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/save" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@color/colorPrimary"
            android:text="@string/btn_save"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancel"
            app:layout_constraintTop_toBottomOf="@+id/edit_description" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>